syntax = "proto3";

// type name = tag
// type specifies datatype, int, float, string, bool, byte.
// name specifies name of the field, can be anything without spaces.
// tag specifies a unqiue number to access a specific field.

message Person {
    int32 age = 1 ;
    string first_name = 2;
    string last_name = 3;
    bytes small_picture = 4 ;
    bool is_profile_verified = 5 ;
    float height = 6;

    repeated string phone_numbers = 7;
}

// repeated specifies a list or array of any datatype discussed above.
