syntax = "proto3";

package example_enumerations;

option go_package = "/enumpb";

message EnumMessage {
    int32 id = 1 ;
    DayOfWeek dayOfWeek = 2;
}

enum DayOfWeek {
    UNKNOWN = 0;
    MONDAY = 1;
    TUESDAY = 2;
    WEDNESDAY = 3;
    THURSDAY = 4;
    FRIDAY = 5;
    SATURDAY = 6;
    SUNDAY = 7;
}